--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 databases:
-  - name: mysitedb
+  - name: task_manager_base
     plan: free
-    databaseName: mysite
-    user: mysite
+    databaseName: task_manager_base
+    user: postgres
 
 services:
   - type: web
@@ -10,11 +10,11 @@ services:
     name: task_manager
     runtime: python
     buildCommand: './build.sh'
-    startCommand: 'uv run gunicorn mysite.asgi:application -k uvicorn.workers.UvicornWorker'
+    startCommand: 'uv run gunicorn task-task_manager.asgi:application -k uvicorn.workers.UvicornWorker'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysitedb
+          name: task_manager_base
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
