--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "dj-database-url>=3.1.0",
     "django>=6.0.1",
+    "django-bootstrap5>=26.1",
     "dotenv>=0.9.9",
     "gunicorn>=23.0.0",
     "psycopg2-binary>=2.9.11",
